バリデーション追加2

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,18 +19,16 @@ jobs:
       SUFFIX: ${{ github.event.inputs.suffix }}
       RELEASE_BRANCH_NAME: release-${{ github.event.inputs.date }}
     steps:
-      - name: Set up GitHub CLI
-        uses: actions/setup-node@v3
-        with:
-          node-version: "14"
-
-      - name: Authenticate GitHub CLI
-        run: gh auth login --with-token <<< "${{ secrets.GITHUB_TOKEN }}"
-
       - name: release_date_and_suffix
         run: |
           echo "ワークフローを実行しているOSは${{ runner.os }}"
           echo "ブランチ名は$RELEASE_BRANCH_NAME"
+
+          if git ls-remote --heads origin $RELEASE_BRANCH_NAME | grep -q $RELEASE_BRANCH_NAME; then
+              echo "Error: ブランチ $RELEASE_BRANCH_NAME は既に存在します。"
+              exit 1
+          fi
+
           if ! [[ "$RELEASE_DATE" =~ ^[0-9]{8}$ ]]; then
               echo "起動を終了します"
               exit 1
@@ -39,10 +37,7 @@ jobs:
               echo "起動を終了します"
               exit 1
           fi
-          if gh api repos/${{ github.repository }}/branches | jq -r '.[].name' | grep -q "^release-$RELEASE_DATE$"; then
-              echo "同じ日付のリリースブランチが既に存在します。起動を終了します。"
-              exit 1
-          fi
+
           echo "releaseブランチを作成します"
 
   release-branch:
