--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,15 +24,16 @@ jobs:
           echo "ワークフローを実行しているOSは${{ runner.os }}"
           echo "ブランチ名は$RELEASE_BRANCH_NAME"
 
-          if git ls-remote --heads origin $RELEASE_BRANCH_NAME | grep -q $RELEASE_BRANCH_NAME; then
-              echo "Error: ブランチ $RELEASE_BRANCH_NAME は既に存在します。"
-              exit 1
+          if git ls-remote --heads origin | grep -q "refs/heads/$RELEASE_BRANCH_NAME"; then
+             echo "Error: ブランチ $RELEASE_BRANCH_NAME は既に存在します。"
+             exit 1
           fi
 
           if ! [[ "$RELEASE_DATE" =~ ^[0-9]{8}$ ]]; then
               echo "起動を終了します"
               exit 1
           fi
+
           if ! [[ "$SUFFIX" =~ ^[a-z]$ ]]; then
               echo "起動を終了します"
               exit 1
