--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,6 +19,7 @@ jobs:
       SUFFIX: ${{ github.event.inputs.suffix }}
       RELEASE_BRANCH_NAME: release-${{ github.event.inputs.date }}
     steps:
+      - uses: actions/checkout@v4
       - name: release_date_and_suffix
         run: |
           echo "ワークフローを実行しているOSは${{ runner.os }}"
@@ -26,8 +27,8 @@ jobs:
 
           git ls-remote | grep -q "refs/heads/$RELEASE_BRANCH_NAME"
           if [ $? -eq 0 ]; then  
-             echo "Error: ブランチ $RELEASE_BRANCH_NAME は既に存在します。"
-             exit 1
+              echo "Error: ブランチ $RELEASE_BRANCH_NAME は既に存在します。"
+              exit 1
           fi
 
           if ! [[ "$RELEASE_DATE" =~ ^[0-9]{8}$ ]]; then
