--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,10 +23,11 @@ jobs:
       - name: release_date_and_suffix
         run: |
           echo "ワークフローを実行しているOSは${{ runner.os }}"
-          echo "ブランチ名は$RELEASE_BRANCH_NAME"
 
           git ls-remote --heads origin | grep -q "refs/heads/$RELEASE_BRANCH_NAME"
-          if [ $? -eq 0 ]; then  
+          if [ $? -eq 1 ]; then  
+              echo "echo "ブランチ名は$RELEASE_BRANCH_NAMEです""
+          else
               echo "Error: ブランチ $RELEASE_BRANCH_NAME は既に存在します。"
               exit 1
           fi
